# microANARCI

./: LICENSE  README.md  pyproject.toml
anarci/: ANARCI_CLI.py  anarci.py  germlines.py
anarci/dat/HMMs/: ALL.hmm  ALL.hmm.h3f  ALL.hmm.h3m  ALL.hmm.h3p
