[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "anarci"
version = '2025.02' # Corresponds to state of main branch in anarci in Feb 2025
description = "minimized version of anarci"
license = "BSD-3-CLAUSE"
requires-python = ">=3.8"
keywords = ['ANARCI', 'antibody numbering']
dependencies = []

[project.scripts]
ANARCI = "anarci.ANARCI_CLI:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]
